Examples/bad/lex/LettersAfterNum.lifp
123.3203wefijwefoijeoifj -- letters after number
